2001-10-09  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Also check for putc_unlocked.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (SUBDIRS): Add projects.
	* configure.in (AC_OUTPUT): Add projects/Makefile.

2001-09-29  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Also create src/user-email.

2001-09-29  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call gt_PREREQ_HOSTNAME.

2001-09-25  Bruno Haible  <haible@clisp.cons.org>

	Upgrade to automake-1.5.
	* aclocal.sh: Remove file.
	* Makefile.am (AUTOMAKE_OPTIONS): Add 'no-dependencies'.
	(EXTRA_DIST): Remove aclocal.sh.
	* configure.in: Add some postprocessing to lib/Makefile, src/Makefile,
	tests/Makefile.
	* missing: Upgrade to automake-1.5.
	* ylwrap: New file, from automake-1.5.

2001-09-23  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call gt_SIGINFO.

2001-10-20  Bruno Haible  <haible@clisp.cons.org>

	* DISCLAIM: Update from
	http://www.iro.umontreal.ca/contrib/po/doc/DISCLAIM.

2001-10-20  Bruno Haible  <haible@clisp.cons.org>

	Assume strchr() exists.
	* configure.in: Remove check for strchr.

2001-09-17  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call gt_PREREQ_BACKUPFILE.

2001-09-17  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Check for utime and utimes.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (AC_OUTPUT): Add intl-java/Makefile.
	* Makefile.am (SUBDIRS): Add intl-java.

2001-09-16  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Don't check for memmove (unneeded).

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Add check for 'raise'. Call gt_SIGNALBLOCKING.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call gt_JAVACOMP and check for 'jar'. Define BUILDJAVA.
	Call gt_JAVAEXEC. Define TESTJAVA.
	(AC_OUTPUT): Also create lib/javacomp.sh and lib/javaexec.sh.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>
