@@ -104,12 +104,11 @@ dnl Check for tools needed for formatting the documentation.
 ac_aux_dir_abs=`cd $ac_aux_dir && pwd`
 AC_PATH_PROG(DVIPS, dvips, $ac_aux_dir_abs/missing dvips)
 AC_PATH_PROG(TEXI2PDF, texi2pdf, $ac_aux_dir_abs/missing texi2pdf)
-AC_PATH_PROG(TEXI2HTML, texi2html, $ac_aux_dir_abs/missing texi2html)
+AC_PATH_PROG(PERL, perl, $ac_aux_dir_abs/missing perl)
 
 dnl Check for tools needed for formatting man pages.
 CROSS_COMPILING=$cross_compiling
 AC_SUBST(CROSS_COMPILING)
-AC_PATH_PROG(PERL, perl, $ac_aux_dir_abs/missing perl)
 
 dnl Generate the version information file in the intl/ directory.
 test -d intl || mkdir intl
